probando nueva configuración de odoo

--- a/odoo-docker/config/odoo.conf
+++ b/odoo-docker/config/odoo.conf
@@ -1,25 +1,14 @@
 [options]
-; Puerto en el que se ejecutará Odoo
 http_port = 8069
-
-; Nombre de la base de datos
 db_name = odoo
-
-; Usuario y contraseña para la conexión a la base de datos
 db_user = odoo
 db_password = odoo
 db_host = db
 db_port = 5432
-
-; Directorio de complementos
 addons_path = /mnt/extra-addons
-
-; Ruta para guardar datos persistentes de Odoo
 data_dir = /var/lib/odoo
-
-; Configuración del registro (opcional)
 logfile = /var/log/odoo/odoo.log
 log_level = info
-
-; Configuración para desarrolladores (opcional)
 developer_mode = True
+admin_passwd = $pbkdf2-sha512$600000$mBPCWKuVkrJ2jrHW.j8n5A$0wLsdYyn4tB19pImXhmRMx26UboO3tqxk.moAGQFwvXOdpESgs3UUtoO0DXhP5BH/xHHKWGcXONXqF1QYOvg0A
+
